[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laptop-pose-estimation-app"
version = "1.0.0"
description = "Real-time single-person laptop camera pose estimation desktop app"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "mediapipe==0.10.14",
  "opencv-python==4.8.1.78",
  "numpy==1.26.4",
  "protobuf==4.25.3",
  "absl-py==2.1.0",
]

[project.scripts]
pose-app = "droidcam_pose_app:main"

[project.gui-scripts]
pose-app-gui = "droidcam_pose_app:main"

[tool.setuptools]
py-modules = ["droidcam_pose_app"]
